"Features" complete. Fixed icon & font align on mobile.

--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -2,10 +2,16 @@
    @mixin clearfix;
    &--gutters {
       margin-right: -65px;
-   }
-   &--gutters>div {
-      padding-right: 65px;
-      box-sizing: border-box;
+      >div {
+         padding-right: 65px;
+         box-sizing: border-box;
+      }
+      &-large {
+         margin-right: -100px;
+         >div {
+            padding-right: 100px;
+         }
+      }
    }
    &__b-margin-until-medium {
       margin-bottom: 1rem;
@@ -20,6 +26,10 @@
          &--larger {
             width: 37%;
          }
+      }
+      &__medium-6 {
+         float: left;
+         width: 50%
       }
       &__medium-8 {
          float: left;
